# mcm-cn-2023

./: README.md  pyproject.toml
package/: T2_求解多波束测深覆盖模型.ipynb  T3-1_搜索可能满足条件的测线.ipynb  T4-2_海床地形图绘制.ipynb
src/2023mcm_cn/T1/: main.ipynb  第一问ans.xlsx
src/2023mcm_cn/T2/: main.ipynb  第二问ans.xlsx
src/2023mcm_cn/T3/: geatpy.ipynb  main.ipynb  scikit-opt.ipynb
src/2023mcm_cn/T3/result/: algorithm info.txt  population info.txt  problem info.txt  result info.txt
src/2023mcm_cn/T3/result/optPop/: Chrom.csv  Field.csv  FitnV.csv  ObjV.csv  Phen.csv
src/2023mcm_cn/T4/draw/: main.ipynb
src/mcm_cn2023/T1/: main.ipynb  第一问ans.xlsx
src/mcm_cn2023/T3/: geatpy.ipynb  main.ipynb  main2.ipynb  scikit-opt.ipynb  第三问.xlsx  第三问ans.emf
src/mcm_cn2023/T3/result/: algorithm info.txt  population info.txt  problem info.txt  result info.txt
src/mcm_cn2023/T3/result/optPop/: Chrom.csv  FitnV.csv  ObjV.csv
src/mcm_cn2023/T4/: main.ipynb  test.ipynb  扰动.emf  第四问.xlsx
src/mcm_cn2023/T4/draw/: 3d-terrain-plotly.html  main.ipynb  第四问地形图.emf  第四问等高图.emf
src/mcm_cn2023/assets/: 附件.xlsx
src/mcm_cn2023/utils/: convertEMF.py  util.py
tests/: conv.ipynb  t.emf  test.ipynb  test1.ipynb  test2.ipynb  组织结构图.emf  绘图2(1).emf  绘图3(1).emf
