[project]
name = "2023mcm.cn"
version = "0.1.0"
description = ""
authors = [
    {name = "JamesCurtis", email = "jamescurtis@foxmail.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
