[project]
name = "2023mcm.cn"
version = "0.1.0"
description = ""
authors = [
    {name = "JamesCurtis", email = "jamescurtis@foxmail.com"},
]
dependencies = [
    "plotly>=5.16.1",
    "prettytable>=3.8.0",
    "scikit-opt>=0.6.6",
    "geatpy>=2.7.0",
    "sympy>=1.12",
    "kaleido==0.2.1",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
